--- a/factory/FactoryMethod/FactoryMethod.cbp
+++ b/factory/FactoryMethod/FactoryMethod.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,6 +34,16 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/ChicagoStore.h" />
+		<Unit filename="include/ChicagoStyleCheesePizza.h" />
+		<Unit filename="include/ChicagoStyleClamPizza.h" />
+		<Unit filename="include/ChicagoStylePepperoniPizza.h" />
+		<Unit filename="include/NewYorkStore.h" />
+		<Unit filename="include/NewYorkStyleCheesePizza.h" />
+		<Unit filename="include/NewYorkStyleClamPizza.h" />
+		<Unit filename="include/NewYorkStylePepperoniPizza.h" />
+		<Unit filename="include/Pizza.h" />
+		<Unit filename="include/PizzaStore.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
